# erpnext

./: .gitattributes  .gitignore  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml
apps/agent/: README.md  pyproject.toml
apps/agent/app/: config.py  main.py
apps/agent/app/agent/: __init__.py  chat.py  executor.py  graph.py  memory.py  planner.py  state.py
apps/agent/app/api/: __init__.py  agent.py
apps/agent/app/tools/: __init__.py  erpnext_client.py  erpnext_tools.py  example_tool.py
apps/erpnext/: ERPNext_Agent_Plan.md  README.md  pyproject.toml
apps/erpnext_custom_layout/: README.md  pyproject.toml
apps/erpnext_custom_layout/erpnext_custom_layout/: hooks.py  modules.txt
apps/erpnext_custom_layout/erpnext_custom_layout/erpnext_custom_layout/module_def/erpnext_custom_layout/: erpnext_custom_layout.json
apps/erpnext_custom_layout/erpnext_custom_layout/erpnext_custom_layout/page/chat/: chat.js  chat.json
apps/erpnext_custom_layout/erpnext_custom_layout/public/js/: erpnext_custom_layout.bundle.js
apps/erpnext_custom_layout/erpnext_custom_layout/public/scss/: custom_layout.scss  erpnext_custom_layout.bundle.scss  erpnext_custom_layout.scss
erpnext/: __init__.py  hooks.py  patches.txt
erpnext/accounts/: general_ledger.py  party.py  utils.py
erpnext/controllers/: accounts_controller.py  buying_controller.py  sales_and_purchase_return.py  selling_controller.py  stock_controller.py  subcontracting_controller.py  taxes_and_totals.py
erpnext/fixtures/: letter_head.json
erpnext/setup/: install.py
libs/: .gitkeep
(+409 files in other folders)
