[project]
name = "erpnext_custom_layout"
authors = [
    { name = "Zachary Sanders", email = "zach@example.com"}
]
description = "Custom layout for ERPNext"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "erpnext_custom_layout"

[project.urls]
Homepage = "https://github.com/zacharysanders/erpnext-custom-layout"

